# dune-darcy

./: CMakeLists.txt  README  README.md  config.h.cmake  dune-darcy.pc.in  dune.module
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/darcy/: CMakeLists.txt  darcy.hh
src/: .dune-darcy.cc.swp  .localoperator_darcy.hh.swp  .problem_definition.hh.swp  CMakeLists.txt  configuration.ini  dune-darcy.cc  hypreinterface.hh  localoperator_darcy.hh  model_parameters.h  problem_definition.hh
src/grids/: 2dsquare.geo  2dsquare.msh  smallsquare.msh
